force-app/main/default/objects/sbaa__ApprovalRule__c/fields/Custom__c.field-meta.xml
<CustomField>
        <fullName>Custom__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Custom</label>
        <type>Checkbox</type>
    </CustomField>