force-app/main/default/objects/sbaa__ApprovalRule__c/fields/Rule__c.field-meta.xml
<CustomField>
        <fullName>Rule__c</fullName>
        <label>RuleNumber</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>