force-app/main/default/objects/sbaa__ApprovalRule__c/fields/Rule_Description__c.field-meta.xml
<CustomField>
        <fullName>Rule_Description__c</fullName>
        <label>Rule Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </CustomField>