force-app/main/default/objects/sbaa__ApprovalRule__c/fields/sbaa__Active__c.field-meta.xml
<CustomField>
        <fullName>sbaa__Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked if Rule should be evaluated when submitting for approval</description>
        <inlineHelpText>Checked if Rule should be evaluated when submitting for approval</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </CustomField>