force-app/main/default/objects/sbaa__ApprovalRule__c/fields/sbaa__ApprovalChain__c.field-meta.xml
<CustomField>
        <fullName>sbaa__ApprovalChain__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Approval chain to which this rule belongs.</description>
        <inlineHelpText>Approval chain to which this rule belongs.</inlineHelpText>
        <label>Approval Chain</label>
        <referenceTo>sbaa__ApprovalChain__c</referenceTo>
        <relationshipLabel>Approval Rules</relationshipLabel>
        <relationshipName>ApprovalRules</relationshipName>
        <type>Lookup</type>
    </CustomField>