force-app/main/default/objects/sbaa__ApprovalRule__c/fields/sbaa__ApprovalStep__c.field-meta.xml
<CustomField>
        <fullName>sbaa__ApprovalStep__c</fullName>
        <description>Step at which this Approval Rule is evaluated</description>
        <inlineHelpText>Step at which this Approval Rule is evaluated</inlineHelpText>
        <label>Approval Step</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>