force-app/main/default/objects/sbaa__ApprovalRule__c/fields/sbaa__ApprovalTemplate__c.field-meta.xml
<CustomField>
        <fullName>sbaa__ApprovalTemplate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the Email Template associated with approval for this Rule</description>
        <inlineHelpText>Lookup to the Email Template associated with approval for this Rule</inlineHelpText>
        <label>Approval Template</label>
        <referenceTo>sbaa__EmailTemplate__c</referenceTo>
        <relationshipLabel>Approved Approval Rules</relationshipLabel>
        <relationshipName>ApprovedApprovalRules</relationshipName>
        <type>Lookup</type>
    </CustomField>