force-app/main/default/objects/sbaa__ApprovalRule__c/fields/sbaa__ApproverField__c.field-meta.xml
<CustomField>
        <fullName>sbaa__ApproverField__c</fullName>
        <description>Used with Dynamic Approvals, the field containing the Approver value used for this Rule</description>
        <inlineHelpText>Used with Dynamic Approvals, the field containing the Approver value used for this Rule</inlineHelpText>
        <label>Approver Field</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Created By</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>