force-app/main/default/objects/sbaa__ApprovalRule__c/fields/sbaa__ConditionsMet__c.field-meta.xml
<CustomField>
        <fullName>sbaa__ConditionsMet__c</fullName>
        <description>Choose the behavior for your conditions: All is AND; Any is OR.</description>
        <inlineHelpText>Choose the behavior for your conditions: All is AND; Any is OR.</inlineHelpText>
        <label>Conditions Met</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                    <default>true</default>
                    <label>All</label>
                </value>
                <value>
                    <fullName>Any</fullName>
                </value>
                <value>
                    <fullName>Custom</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>