force-app/main/default/objects/sbaa__ApprovalRule__c/fields/sbaa__EffectiveDateField__c.field-meta.xml
<CustomField>
        <fullName>sbaa__EffectiveDateField__c</fullName>
        <description>Type of date field from the selected Target Object that Effective Start and End Dates reference when applying Approval Rules</description>
        <inlineHelpText>Type of date field from the selected Target Object that Effective Start and End Dates reference when applying Approval Rules</inlineHelpText>
        <label>Effective Date Field</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Created Date</fullName>
                </value>
                <value>
                    <fullName>Submitted Date</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>