force-app/main/default/objects/sbaa__ApprovalRule__c/fields/sbaa__EffectiveEndDate__c.field-meta.xml
<CustomField>
        <fullName>sbaa__EffectiveEndDate__c</fullName>
        <description>The end date range for when this rule will be in effect (inclusive)</description>
        <inlineHelpText>The end date range for when this rule will be in effect (inclusive)</inlineHelpText>
        <label>Effective End Date</label>
        <type>Date</type>
    </CustomField>