force-app/main/default/objects/sbaa__ApprovalRule__c/fields/sbaa__EffectiveStartDate__c.field-meta.xml
<CustomField>
        <fullName>sbaa__EffectiveStartDate__c</fullName>
        <description>The start date for when this rule will be in effect (inclusive)</description>
        <inlineHelpText>The start date for when this rule will be in effect (inclusive)</inlineHelpText>
        <label>Effective Start Date</label>
        <type>Date</type>
    </CustomField>