force-app/main/default/objects/sbaa__ApprovalRule__c/fields/sbaa__ExcludedStatuses__c.field-meta.xml
<CustomField>
        <fullName>sbaa__ExcludedStatuses__c</fullName>
        <description>Statuses that this Approval Rule should not be applied to</description>
        <inlineHelpText>Statuses that this Approval Rule should not be applied to</inlineHelpText>
        <label>Excluded Statuses</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Recalled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>