force-app/main/default/objects/sbaa__ApprovalRule__c/fields/sbaa__OverrideField__c.field-meta.xml
<CustomField>
        <fullName>sbaa__OverrideField__c</fullName>
        <description>If set, the value of this field overrides the Approval Conditions</description>
        <inlineHelpText>If set, the value of this field overrides the Approval Conditions</inlineHelpText>
        <label>Override Field</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Name</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>