force-app/main/default/objects/sbaa__ApprovalRule__c/fields/sbaa__Parallel__c.field-meta.xml
<CustomField>
        <fullName>sbaa__Parallel__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, all approvals at the step happen in parallel. This setting only has an effect when using Advanced Approvals with native approvals.</description>
        <inlineHelpText>If checked, all approvals at the step happen in parallel. This setting only has an effect when using Advanced Approvals with native approvals.</inlineHelpText>
        <label>Parallel</label>
        <type>Checkbox</type>
    </CustomField>