force-app/main/default/objects/sbaa__ApprovalRule__c/fields/sbaa__RecallTemplate__c.field-meta.xml
<CustomField>
        <fullName>sbaa__RecallTemplate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the Email Template associated with recalls for this Rule</description>
        <inlineHelpText>Lookup to the Email Template associated with recalls for this Rule</inlineHelpText>
        <label>Recall Template</label>
        <referenceTo>sbaa__EmailTemplate__c</referenceTo>
        <relationshipLabel>Recalled Approval Rules</relationshipLabel>
        <relationshipName>RecalledApprovalRules</relationshipName>
        <type>Lookup</type>
    </CustomField>