force-app/main/default/objects/sbaa__ApprovalRule__c/fields/sbaa__RejectionRecipients__c.field-meta.xml
<CustomField>
        <fullName>sbaa__RejectionRecipients__c</fullName>
        <description>Choose one or more recipients for the rejection email notification.</description>
        <inlineHelpText>Choose one or more recipients for the rejection email notification.</inlineHelpText>
        <label>Rejection Recipients</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Record Owner</fullName>
                </value>
                <value>
                    <fullName>Record Created By</fullName>
                </value>
                <value>
                    <fullName>Initial Submitter</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>