force-app/main/default/objects/sbaa__ApprovalRule__c/fields/sbaa__RejectionTemplate__c.field-meta.xml
<CustomField>
        <fullName>sbaa__RejectionTemplate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the Email Template associated with rejection for this Rule</description>
        <inlineHelpText>Lookup to the Email Template associated with rejection for this Rule</inlineHelpText>
        <label>Rejection Template</label>
        <referenceTo>sbaa__EmailTemplate__c</referenceTo>
        <relationshipLabel>Rejected Approval Rules</relationshipLabel>
        <relationshipName>RejectedApprovalRules</relationshipName>
        <type>Lookup</type>
    </CustomField>