force-app/main/default/objects/sbaa__ApprovalRule__c/fields/sbaa__RequestTemplate__c.field-meta.xml
<CustomField>
        <fullName>sbaa__RequestTemplate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the Email Template associated with approval requests for this Rule</description>
        <inlineHelpText>Lookup to the Email Template associated with approval requests for this Rule</inlineHelpText>
        <label>Request Template</label>
        <referenceTo>sbaa__EmailTemplate__c</referenceTo>
        <relationshipLabel>Approval Rules (Requested)</relationshipLabel>
        <relationshipName>RequestedApprovalRules</relationshipName>
        <type>Lookup</type>
    </CustomField>