force-app/main/default/objects/sbaa__ApprovalRule__c/fields/sbaa__RequireExplicitApproval__c.field-meta.xml
<CustomField>
        <fullName>sbaa__RequireExplicitApproval__c</fullName>
        <defaultValue>false</defaultValue>
        <description>By default, approving any Approval will auto-approve all other Approvals assigned to the same User. If this box is checked, an Approval originated by this Rule will not be auto-approved and must be explicitly approved.</description>
        <inlineHelpText>By default, approving any Approval will auto-approve all other Approvals assigned to the same User. If this box is checked, an Approval originated by this Rule will not be auto-approved and must be explicitly approved.</inlineHelpText>
        <label>Require Explicit Approval</label>
        <type>Checkbox</type>
    </CustomField>