force-app/main/default/objects/sbaa__ApprovalRule__c/fields/sbaa__TargetObject__c.field-meta.xml
<CustomField>
        <fullName>sbaa__TargetObject__c</fullName>
        <description>API Name of the object to which this Rule applies</description>
        <inlineHelpText>API Name of the object to which this Rule applies</inlineHelpText>
        <label>Target Object</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Opportunity</fullName>
                </value>
                <value>
                    <fullName>SBQQ__Quote__c</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>