force-app/main/default/objects/sbaa__ApprovalRule__c/validationRules/sbaa__Effective_Date_Range_Ordered.validationRule-meta.xml
<ValidationRule>
        <fullName>sbaa__Effective_Date_Range_Ordered</fullName>
        <active>true</active>
        <description>Effective End Date must not come before Effective Start Date.</description>
        <errorConditionFormula>sbaa__EffectiveStartDate__c&gt;sbaa__EffectiveEndDate__c</errorConditionFormula>
        <errorMessage>Effective End Date must not come before Effective Start Date.</errorMessage>
    </ValidationRule>