force-app/main/default/objects/sbaa__ApprovalRule__c/listViews/sbaa__ActiveRules.listView-meta.xml
<ListView>
        <fullName>sbaa__ActiveRules</fullName>
        <columns>NAME</columns>
        <columns>Rule_Description__c</columns>
        <columns>sbaa__ApprovalChain__c</columns>
        <columns>sbaa__Approver__c</columns>
        <columns>sbaa__Active__c</columns>
        <columns>sbaa__ConditionsMet__c</columns>
        <columns>sbaa__ApprovalStep__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>sbaa__ApproverField__c</columns>
        <columns>sbaa__RequireExplicitApproval__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>sbaa__Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Rules</label>
        <language>en_US</language>
    </ListView>