force-app/main/default/objects/sbaa__ApprovalRule__c/listViews/sbaa__All.listView-meta.xml
<ListView>
        <fullName>sbaa__All</fullName>
        <columns>NAME</columns>
        <columns>Rule_Description__c</columns>
        <columns>sbaa__Active__c</columns>
        <columns>sbaa__ConditionsMet__c</columns>
        <columns>sbaa__ApprovalStep__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>sbaa__ApprovalChain__c</columns>
        <columns>sbaa__RequireExplicitApproval__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </ListView>